--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,9 @@ go:
   - 1.x
   - 1.7.x
   - 1.8.x
+
+
+after_script: # here's a build step block
+- echo "We can put normal shell commands here"
+- echo "more shell commands here"
+- go run main.go
