add first postman test

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ go:
 
 
 after_script: # here's a build step block
-- echo "We can put normal shell commands here"
-- echo "more shell commands here"
 - nohup go run main.go > /dev/null 2>&1 &
 - npm install -g newman
+- newman run ./PostManTests/web.postman_collection.json
