--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ go:
 
 
 after_script: # here's a build step block
+- node -v
 - nohup go run main.go > /dev/null 2>&1 &
 - npm install -g newman
 - newman run ./PostManTests/web.postman_collection.json
