Not only update npm

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ go:
 
 after_script: # here's a build step block
 - npm update npm -g
+- npm update -g n
 - node -v
 - nohup go run main.go > /dev/null 2>&1 &
 - npm install -g newman
