--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,9 @@ go:
 
 
 after_script: # here's a build step block
-- npm update -g n
-- npm update npm -g
-- npm update -g n
-- npm update npm -g
-- npm update -g n
-- npm update npm -g
+- nvm install stable
+- nvm use stable
+- npm install
 - node -v
 - nohup go run main.go > /dev/null 2>&1 &
 - npm install -g newman
